--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "ipaddr.js": "^2.0.1",
         "jimp": "^0.22.7",
         "json5": "^2.2.3",
+        "lodash": "^4.17.21",
         "mime-types": "^2.1.35",
         "mongodb": "^4.11.0",
         "multer": "^1.4.5-lts.1",
